# include_str_rs_file_mre

./: Cargo.toml  README.md
src/: main.rs
